--- a/index.css
+++ b/index.css
@@ -836,7 +836,7 @@ td {
 
 .fadein{
     opacity:0;
-    transition:filter 25s ease-in 100s, opacity 1s ease-in;
+    transition:filter 25s ease-in 100s, opacity 1s ease-in 1s;
 }
 
 .tag{
@@ -1058,17 +1058,23 @@ td {
         transition: opacity .5s ease-in 0s;
     }
 
+    .logob{
+        top:13%;
+        max-width:100vmin;
+        transition: opacity .5s ease-in 0s;
+    }
+
     .mbtn{
         max-width:fit-content;
         display:inline-block;
         position:inherit; 
-        margin:8vmax;
+        margin:4vmax;
         font-size: 6.5vmin;
 
     }
 
     .c{
-        margin-top:34vmax;
+        margin-top:29vmax;
         transition: opacity .7s ease-in;
     }
 
@@ -1082,13 +1088,18 @@ td {
 
     .sfsx {
 
-        -webkit-transform: scale(1,3);
-        -moz-transform: scale(1,3);
-        -ms-transform: scale(1,3);
-        -o-transform: scale(1,3);
-        transform: scale(1,3);
+        -webkit-transform: scale(1,1);
+        -moz-transform: scale(1,1);
+        -ms-transform: scale(1,1);
+        -o-transform: scale(1,1);
+        transform: scale(1,1);
     }
-
+    .sslim{
+        max-width: 50vmin;
+        padding-top:0%;
+        padding-bottom:0%;
+        float:none;
+    }
 }
 
 @media screen and (max-width: 650px){
