--- a/index.css
+++ b/index.css
@@ -488,7 +488,7 @@ td {
     transform: translate(-50%, -50%);
     z-index: 4;
     opacity:0;
-    transition:filter 25s ease-in 100s, opacity 1s ease-in 1s;
+    transition:filter 25s ease-in 100s, opacity .5s ease-in 0s;
 }
 
 .spim{
