--- a/index.css
+++ b/index.css
@@ -487,8 +487,8 @@ td {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     z-index: 4;
-    opacity:0;
-    transition:filter 25s ease-in 100s, opacity .5s ease-in 0s;
+    filter:brightness(0%);
+    transition:filter 2s ease-in, opacity .5s ease-in 0s;
 }
 
 .spim{
@@ -836,7 +836,8 @@ td {
 
 .fadein{
     opacity:0;
-    transition:filter 25s ease-in 100s, opacity .5s ease-in 0s;
+    transition:filter 2s ease-in, opacity .5s ease-in 0s;
+    filter:brightness(0%);
 }
 
 .tag{
