--- a/index.css
+++ b/index.css
@@ -29,6 +29,10 @@
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
+.right{
+    text-align:right;
+}
+
 #container0{
     width:100%;
     text-align: center;
@@ -442,9 +446,10 @@ td {
 }
 
 .lim{
-    max-width: 40%;
+    max-width: 33%;
     padding-top:0%;
     padding-bottom:0%;
+    padding-left: 2vw;
     float:none;
 }
 
@@ -569,11 +574,24 @@ td {
 
 .about{
     max-width: 70%;
-    font-size:2.8vmin;
+    font-size:2vmin;
     position: absolute;
     top:55%;
     left:15%;
-    text-align: center;
+    text-align: left;
+    opacity:0;
+    transition:opacity .3s ease-in .2s;
+    z-index: -10;
+}
+
+.aboutm{
+    display:none;
+    max-width: 70%;
+    font-size:2vmin;
+    position: absolute;
+    top:55%;
+    left:15%;
+    text-align: left;
     opacity:0;
     transition:opacity .3s ease-in .2s;
     z-index: -10;
@@ -584,14 +602,19 @@ td {
 }
 
 .contact{
-    font-size:2.8vmin;
+    font-size:2vmin;
     position: absolute;
     top:55%;
-    left:15%;
-    text-align: left;
+    right:15%;
+    text-align: right;
     opacity:0;
     transition:opacity .3s ease-in .2s;
     z-index: -11;
+}
+
+.headline{
+    text-align: center;
+    margin-top:-3vmax;
 }
 
 .ourwork{
@@ -920,6 +943,15 @@ td {
     transform: scale(1.5,1);
 }
 
+.sfsxm {
+
+    -webkit-transform: scale(1.5,1);
+    -moz-transform: scale(1.5,1);
+    -ms-transform: scale(1.5,1);
+    -o-transform: scale(1.5,1);
+    transform: scale(1.5,1);
+}
+
 .sfsxy{
     -webkit-transform: scale(1.5,.5);
     -moz-transform: scale(1.5,.5);
@@ -961,6 +993,10 @@ td {
     z-index: 10;
 }
 
+.sp{
+    font-size: 2.25vmin;
+}
+
 
 
 /* platforms */
@@ -973,7 +1009,7 @@ td {
  @media screen and (max-width: 1300px){
     .lim{
         max-width: 80%;
-        padding-bottom:20%;
+        padding-bottom:0%;
     }
     .pim{
         max-height: 40vmin;
@@ -1181,7 +1217,7 @@ td {
     }
 
     .logo{
-        top:16%;
+        top:18%;
         max-width:65vmin;
         transition: opacity .5s ease-in 0s, left 10s ease-out;
     }
@@ -1239,14 +1275,14 @@ td {
     .nlc{
         position:absolute;
         top:3%;
-        left:4%;
+        left:0;
         margin:0;
         mix-blend-mode: difference;
     }
 
     .nrc{
         position:absolute;
-        left:50%;
+        right:25vw;
         top:3%;
         margin:0;
         mix-blend-mode: difference;
@@ -1254,8 +1290,8 @@ td {
 
     .nc{
         position:absolute;
-        left:24%;
-        top:23%;
+        left:30vw;
+        top:3%;
         margin:0;
         mix-blend-mode: difference;
     }
@@ -1278,6 +1314,39 @@ td {
 
     .nmt{
         margin-top:-120vmin;
+    }
+
+    .sfsxm {
+
+        -webkit-transform: scale(.5,1.5);
+        -moz-transform: scale(.5,1.5);
+        -ms-transform: scale(.5,1.5);
+        -o-transform: scale(.5,1.5);
+        transform: scale(.5,1.5);
+    }
+
+    .about{
+        display:none;
+        top:30vh;
+        font-size:3vmin;
+        max-width: 90%;
+        left:5%;
+    }
+
+    .contact{
+        top:25%;
+        font-size:4.5vmin;
+        max-width: 90%;
+        right:5%;
+    }
+
+    .aboutm{
+        display:inline-block;
+        top:30vh;
+        font-size:4.5vmin;
+        max-width: 90%;
+        left:5%;
+        top:25%;
     }
 }
 
