--- a/aa.css
+++ b/aa.css
@@ -33,8 +33,7 @@ input{
 }
 
 .icon{
-    min-width: 20vw;
-    max-width: 20vw;
+    max-height: 40vh;
 }
 
 .icont{
@@ -43,15 +42,18 @@ input{
     padding-left: 5vw;
 }
 
-.worktable{
-    margin-top: 10vh;
+.worktable, .worktabletext{
+    margin-top: 25vh;
     margin-left: auto;
     margin-right: auto;
 }
 
-.icon:hover{
-    opacity: .5;
+.worktabletext{
+    position: relative;
+    top:-40vh;
 }
+
+
 
 
 .icons{
@@ -242,8 +244,10 @@ mix-blend-mode: difference;
 }
 
 .icon{
-    max-width: 75vw;
-    min-width: 75vw;
+    max-height: 40vh;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    margin-top: 10vh;
 }
 
 .portimg{
@@ -281,6 +285,14 @@ mix-blend-mode: difference;
 
 .staff{
     max-width:70vw;
+}
+
+.titleimg{
+    margin-top: -5vh;
+    max-width: 70vw;
+    text-align: center;
+    float:none;
+    margin-bottom: 5vh;
 }
 
 }
