--- a/aa.css
+++ b/aa.css
@@ -77,41 +77,43 @@ input{
     -o-transform: scale(1.5,1);
     transform: scale(1.5,1);
     margin-bottom:10vh;
-    opacity: 1;
+    opacity: 0;
 }
 
 .c{
     position:absolute;
     right:48%;
-    bottom:30%;
+    bottom:25%;
     transition:transform 10s ease-out 0s, -webkit-transform 10s ease-out 0s, -moz-transform 10s ease-out 0s, -ms-transform 10s ease-out 0s, -o-transform 10s ease-out 0s;
 }
 
 .c:hover, .l:hover, .r:hover{
-    -webkit-transform: scale(1.5,5);
+    opacity:1;
+    /* -webkit-transform: scale(1.5,5);
     -moz-transform: scale(1.5,5);
     -ms-transform: scale(1.5,5);
     -o-transform: scale(1.5,5);
-    transform: scale(1.5,5);
+    transform: scale(1.5,5); */
 }
 
 
 .l{
     position:absolute;
     right:70%;
-    bottom:30%;
+    bottom:25%;
     transition:transform 10s ease-out 0s, -webkit-transform 10s ease-out 0s, -moz-transform 10s ease-out 0s, -ms-transform 10s ease-out 0s, -o-transform 10s ease-out 0s;
 }
 
 .r{
     position:absolute;
     left:70%;
-    bottom:30%;
+    bottom:25%;
     transition:transform 10s ease-out 0s, -webkit-transform 10s ease-out 0s, -moz-transform 10s ease-out 0s, -ms-transform 10s ease-out 0s, -o-transform 10s ease-out 0s;
 }
 
 .menubutton{
     position:fixed;
+    z-index:5;
     top:-30pt;
     left:1vw;
     mix-blend-mode: difference;
@@ -135,8 +137,6 @@ mix-blend-mode: difference;
     opacity: 0;
     visibility:hidden;
     position:relative;
-    top:-18pt;
-    transition: top .5s ease-out 0s, opacity .3s ease-in 0s, visibility .5s ease-out 0s;
 }
 
 .sideimgs{
@@ -174,16 +174,13 @@ mix-blend-mode: difference;
     opacity: 0;
     visibility:hidden;
     position:relative;
-    top:-32pt;
-    transition: top .5s ease-out 0s,  opacity .2s ease-in 0s,  visibility .5s ease-out 0s ;
+
 } 
 
 .about{
     opacity: 0;
     visibility:hidden;
     position:relative;
-    top:-32pt;
-    transition: top .5s ease-out 0s,  opacity .2s ease-in 0s,  visibility .5s ease-out 0s ;
 } 
 
 .header{
@@ -217,10 +214,15 @@ mix-blend-mode: difference;
 
 .logo{
     max-height:30vh;
+    opacity: 0;
 }
 
 .logo2{
     max-height: 30pt;
+}
+
+.logo2:hover{
+    opacity:0.7;
 }
 
 .center{
@@ -244,7 +246,7 @@ mix-blend-mode: difference;
 }
 
 .icon{
-    max-height: 40vh;
+    max-height: 30vh;
     padding-left: 10vw;
     padding-right: 10vw;
     margin-top: 10vh;
@@ -260,7 +262,7 @@ mix-blend-mode: difference;
 
 .menu{
     left:3vw;
-    font-size: 20pt;
+    font-size: 15pt;
 }
 
 .logo{
@@ -268,17 +270,20 @@ mix-blend-mode: difference;
     max-width:65vmin;
 }
 
-.c{
+.c{ 
+    font-size:3vmax;
     display:inline-block;
     position:inherit;
 }
 
 .l{
+    font-size:3vmax;
     display:inline-block;
     position:inherit;
 }
 
 .r{
+    font-size:3vmax;
     display:inline-block;
     position:inherit;
 }
