--- a/aa.css
+++ b/aa.css
@@ -7,13 +7,51 @@ body{
     text-align: center;
     font-size:30pt;
     color:white;
-    overflow-x: hidden;
 }
 
 a{
     color:white;
     
     text-decoration: none;
+}
+
+h3{
+	white-space:nowrap;
+	text-wrap:nowrap;
+	font-weight:900;
+	color:grey;
+	opacity:0.5;
+	font-size:5vmin;
+	-moz-transform: scale(1,2);
+}
+
+
+.htext{
+	 font-size:15pt;
+}
+
+.banner{
+	position:absolute;
+	bottom:0;
+	overflow:hidden;
+}
+
+.bannerv{
+	position:absolute;
+	bottom:0;
+	left:-3vmin;
+}
+
+h5{
+	white-space:nowrap;
+	font-size:5vmin;
+	writing-mode:vertical-rl;
+	text-wrap:nowrap;
+	-moz-transform: scale(2,1);
+	font-weight:900;
+	color:grey;
+	opacity:0;
+
 }
 
 a:hover , h4:hover{
@@ -79,19 +117,17 @@ input{
 }
 
 .indexbtn{
-    -webkit-transform: scale(1.5,1);
+    /*-webkit-transform: scale(1.5,1);
     -moz-transform: scale(1.5,1);
     -ms-transform: scale(1.5,1);
     -o-transform: scale(1.5,1);
-    transform: scale(1.5,1);
+    transform: scale(1.5,1);*/
     margin-bottom:10vh;
     opacity: 0;
 }
 
 .c{
-    position:absolute;
-	left:47%;
-    bottom:25%;
+
     transition:transform 10s ease-out 0s, -webkit-transform 10s ease-out 0s, -moz-transform 10s ease-out 0s, -ms-transform 10s ease-out 0s, -o-transform 10s ease-out 0s;
 }
 
@@ -104,18 +140,24 @@ input{
     transform: scale(1.5,5); */
 }
 
+.flex{
+	margin-top:10vh;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+.flex div{
+	width:100%;
+}
 
 .l{
-    position:absolute;
-    right:70%;
-    bottom:25%;
+
     transition:transform 10s ease-out 0s, -webkit-transform 10s ease-out 0s, -moz-transform 10s ease-out 0s, -ms-transform 10s ease-out 0s, -o-transform 10s ease-out 0s;
 }
 
 .r{
-    position:absolute;
-    left:70%;
-    bottom:25%;
+
     transition:transform 10s ease-out 0s, -webkit-transform 10s ease-out 0s, -moz-transform 10s ease-out 0s, -ms-transform 10s ease-out 0s, -o-transform 10s ease-out 0s;
 }
 
@@ -236,8 +278,10 @@ summary{
 
 
 .logo{
-    max-height:30vh;
+	margin-top:10vh;
+    max-height:20vh;
     opacity: 0;
+	display:block;
 }
 
 .logo2{
@@ -309,6 +353,11 @@ summary{
 
 @media screen and (max-aspect-ratio:8/6){
 
+.flex{
+	flex-direction:column;
+	align-items:center;
+}
+
 .mobh{
     display: none;
 }
@@ -343,19 +392,19 @@ summary{
 }
 
 .c{ 
-    font-size:3vmax;
+    font-size:4vmax;
     display:inline-block;
     position:inherit;
 }
 
 .l{
-    font-size:3vmax;
+    font-size:4vmax;
     display:inline-block;
     position:inherit;
 }
 
 .r{
-    font-size:3vmax;
+    font-size:4vmax;
     display:inline-block;
     position:inherit;
 }
