--- a/aaa.css
+++ b/aaa.css
@@ -3,16 +3,29 @@ html{
 }
 
 body{
-	font-family:"Times New Roman", Times, serif;
+	font-family:"arial", Times, serif;
     text-align: center;
     font-size:30pt;
     color:white;
 }
 
 h1{
+	
 font-weight:normal;
 font-size:48px;
-margin:0;	
+margin:0;
+}
+
+.title{
+	letter-spacing:5px;
+	width:60vw;
+	font-family:arial;
+	text-align:center;
+
+padding:25px;
+border-radius:100px;
+margin-top:25px;
+margin:auto;	
 }
 
 h2{
@@ -26,8 +39,10 @@ max-width:650px;
 
 
 
+
+
 .content{
-width:700px;
+max-width:700px;
 margin:auto;
 text-align:left;	
 }
@@ -44,7 +59,7 @@ p{
 .entry{
 
 padding:10px;
-box-shadow:0px 0px 20px 10px white;	
+	
 }
 
 a{
