--- a/aaa.css
+++ b/aaa.css
@@ -35,7 +35,9 @@ h2{
 }
 
 img{
-max-width:650px;	
+display:block;
+max-width:100%;
+overflow:hidden;	
 }
 
 b{
@@ -74,4 +76,15 @@ color:red;
 text-align:center;	
 }
 
-.
+@media screen and (max-aspect-ratio:8/6){
+	
+h2{
+	font-size:10px;
+}
+
+.mobh{
+	display:none;
+}
+
+
+}
